--- a/TP1/src/package.json
+++ b/TP1/src/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "metrics": "^0.1.21",
+    "node-datetime": "^2.1.2",
+    "nodemon": "^2.0.21",
+    "process": "^0.11.10",
+    "request": "^2.88.2"
+  }
 }
