--- a/TP1/src/package.json
+++ b/TP1/src/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^14.7.1",
     "express": "^4.18.2",
     "metrics": "^0.1.21",
     "node-datetime": "^2.1.2",
