--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "tp1" : "node ../TP1/src/app.js",
+    "tp2": "node ./TP2/src/app.js"
+  }
 }
